[SOIN] Précise qu’on utilise des classes DSFR adaptées
... en ajoutant des nouvelles classes non standards (-ns). L’objectif est de laisser la place pour ajouter une feuille de style avec les règles du DSFR.

--- a/front/_layouts/page-statique.html
+++ b/front/_layouts/page-statique.html
@@ -20,9 +20,9 @@ styles: /assets/styles/page-statique.css
 
     <div id="fil-ariane"></div>
     {% endif %}
-    <h1>{{page.titrePageStatique}}</h1>
+    <h1 class="alternatif-xs-ns">{{page.titrePageStatique}}</h1>
     {% if page.sousTitrePageStatique %}
-    <p>{{page.sousTitrePageStatique}}</p>
+    <p class="texte-chapo-xl-ns">{{page.sousTitrePageStatique}}</p>
     {% endif %}
   </div>
 </section>
