--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -535,7 +535,7 @@ footer {
     }
   }
 
-  h1 {
+  h1.alternatif-xs-ns {
     font-size: 2.5rem;
     line-height: 2.875rem;
     margin: 16px 0 16px;
@@ -547,7 +547,7 @@ footer {
     }
   }
 
-  p {
+  p.texte-chapo-xl-ns {
     margin: 0;
     font-size: 1.25rem;
     line-height: 2rem;
