--- a/front/assets/styles/accueil2.scss
+++ b/front/assets/styles/accueil2.scss
@@ -70,8 +70,9 @@
           margin-bottom: 16px;
         }
         .caroussel-selections {
-          height: 420px;
-          border: 1px solid #3a3a3a;
+          display: grid;
+          grid-template-columns: repeat(3, minmax(254px, 1fr));
+          gap:16px;
           margin-bottom: 48px;
         }
       }
