Retarde le chargement des composants de l'UI Kit
...afin de s'assurer que les slots fonctionnent

--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -35,6 +35,7 @@
     <script
       src="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.36.1/lab-anssi-ui-kit.iife.js"
       nonce="%%NONCE%%"
+      defer
     ></script>
     <main>
       {% include header.html %} {% include bandeau-maintenance.html %} {%
