--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -29,6 +29,7 @@
   --centre-aide-background-entete: #0d0c21
     url('/assets/images/motif-fond-service-opacite-16.png');
   --bandeau-titre-background: var(--centre-aide-background-entete);
+  --brique-carrousel-bouton-action-texte-couleur: #161616;
   --couleur-lien: #0d0c21;
   --filtre-couleur-primaire: brightness(0) invert(3%) sepia(26%) saturate(6797%)
     hue-rotate(236deg) brightness(105%) contrast(97%);
