--- a/front/assets/styles/dsfr.scss
+++ b/front/assets/styles/dsfr.scss
@@ -36,6 +36,12 @@ h2 {
   margin: 0 0 24px;
 }
 
+.texte-standard-md {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 0 0 24px;
+}
+
 .texte-detail-sm {
   font-size: 0.875rem;
   line-height: 1.5rem;
