Dirige vers le test de maturité

--- a/front/assets/styles/accueil2.scss
+++ b/front/assets/styles/accueil2.scss
@@ -110,6 +110,9 @@
     flex-direction: column;
     align-self: stretch;
     align-items: flex-start;
-    gap: 24px;
+
+    lab-anssi-lien {
+      margin-bottom: 24px;
+    }
   }
 }
