--- a/front/assets/styles/dsfr.scss
+++ b/front/assets/styles/dsfr.scss
@@ -14,6 +14,16 @@ h2 {
   }
 }
 
+h6 {
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  margin: 0 0 24px;
+  @include a-partir-de(md) {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 .alternatif-xs {
   font-size: 2.5rem;
   line-height: 3rem;
