--- a/front/assets/styles/accueil2.scss
+++ b/front/assets/styles/accueil2.scss
@@ -2,6 +2,7 @@
 ---
 
 @use '../../assets/styles/responsive' as *;
+@use '../../assets/styles/grille' as *;
 
 .chapeau.fond-sombre {
   padding: 48px var(--gouttiere);
@@ -20,6 +21,14 @@
     }
     .texte-detail-sm {
       margin-bottom: 0;
+    }
+
+    img {
+      aspect-ratio: 16 /9;
+      @include a-partir-de(md) {
+        align-self: center;
+        max-width: taille-pour-colonnes(10);
+      }
     }
   }
 }
