Optimise le délai de chargement
...en convertissant les images de motif de fond en AVIF (gain de 200% environ)

--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -342,7 +342,7 @@ section {
 }
 
 .nis2 {
-  background: #0d0c21 url('/assets/images/motif-fond-service-opacite-16.png');
+  background: #0d0c21 url('/assets/images/motif-fond-service-opacite-16.avif');
 
   .contenu-section {
     background: white;
