--- a/front/assets/styles/connexion.scss
+++ b/front/assets/styles/connexion.scss
@@ -76,7 +76,7 @@ section.connexion {
       .contenu-secondaire {
         flex: 1 0 0;
         background: #0d0c21
-          url('/assets/images/motif-fond-service-opacite-16.png');
+          url('/assets/images/motif-fond-service-opacite-16.avif');
         display: flex;
         justify-content: center;
         flex-direction: column;
