--- a/front/assets/styles/service.scss
+++ b/front/assets/styles/service.scss
@@ -4,7 +4,7 @@
 @use '../../assets/styles/responsive' as *;
 
 .chapeau {
-  background: #f4f4f4 url('/assets/images/motif-fond-service.png');
+  background: #f4f4f4 url('/assets/images/motif-fond-service.avif');
   padding: 24px var(--gouttiere);
 
   .contenu-section {
