--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -248,7 +248,7 @@ section {
 }
 
 .encart.fond-clair {
-  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.png');
+  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.avif');
 
   .cyber-depart {
     border-bottom-color: var(--noir);
@@ -256,7 +256,7 @@ section {
 }
 
 .votre-parcours {
-  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.png');
+  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.avif');
 
   .tuile {
     background: white;
