[ACCUEIL v2] Illustre le chapeau

--- a/front/assets/styles/accueil2.scss
+++ b/front/assets/styles/accueil2.scss
@@ -54,6 +54,7 @@
       aspect-ratio: 16 /9;
       width: 100%;
       justify-self: center;
+      transform: scaleX(-1);
       @include a-partir-de(md) {
         align-self: center;
         max-width: taille-pour-colonnes(10);
