[SOIN] Fourni des mixin SCSS pour extraire certains styles
... et permettre de les utiliser dans MSC et le composant "marque grise"

--- a/front/assets/styles/boutons.scss
+++ b/front/assets/styles/boutons.scss
@@ -1,87 +1,6 @@
 ---
 ---
 
-.bouton {
-  font-family: 'Marianne';
-  display: flex;
-  justify-content: center;
-  border-radius: 6px;
-  text-align: center;
-  padding: 10px 24px;
-  text-decoration: none;
-  font-weight: 500;
-  border: none;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  cursor: pointer;
-}
+@use 'commun' as commun;
 
-.bouton.primaire {
-  background: var(--jaune-msc);
-  color: var(--noir);
-
-  &[disabled] {
-    background: var(--gris-desactive-fond);
-    color: var(--gris-desactive-texte);
-    cursor: not-allowed;
-  }
-
-  &:not([disabled]) {
-    &:hover {
-      background: var(--jaune-msc-hover);
-    }
-    &:active {
-      background: var(--jaune-msc-clique);
-    }
-  }
-}
-
-.bouton.secondaire {
-  border: 1px solid var(--noir);
-  color: var(--noir);
-  padding: 16px 24px;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  background: white;
-
-  &:not([disabled]).actif {
-    background: var(--jaune-msc);
-
-    &:not([disabled]):hover {
-      background: var(--jaune-msc-hover);
-    }
-
-    &:not([disabled]):active {
-      background: var(--jaune-msc-clique);
-    }
-  }
-
-  &[disabled] {
-    border-color: var(--gris-desactive-fond);
-    background: white;
-    color: var(--gris-desactive-texte);
-    cursor: not-allowed;
-  }
-
-  &:not([disabled]):hover {
-    background: var(--gris-secondaire-fond-hover);
-  }
-
-  &:not([disabled]):active {
-    background: var(--gris-secondaire-fond-clique);
-  }
-}
-
-.fond-sombre {
-  .bouton.secondaire {
-    background: transparent;
-    border: 1px solid white;
-    color: white;
-  }
-}
-
-.bouton.taille-moyenne {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  padding: 8px 16px;
-}
+@include commun.bouton();
