--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -2,6 +2,7 @@
 ---
 
 @use '../../assets/styles/responsive' as *;
+@use './commun' as *;
 
 :root {
   --noir: #0d0c21;
@@ -835,29 +836,7 @@ select {
   font-family: 'Marianne';
 }
 
-.erreur-champ-saisie {
-  font-size: 12px;
-  line-height: 14px;
-  margin-top: 16px;
-}
-
-.erreur-champ-saisie {
-  color: var(--erreur-texte);
-}
-
-.erreur-champ-saisie:before {
-  content: '';
-  display: flex;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-}
-
-.erreur-champ-saisie:before {
-  background-image: url('/assets/images/erreur.svg');
-}
+@include erreur-champ-saisie();
 
 #bouton-favori {
   img {
