Ajoute le bouton de redirection vers les guides
...dans le chapeau de l'accueil

--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -37,6 +37,16 @@
       }
     }
 
+    .actions {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      .bouton.secondaire {
+        width: auto;
+      }
+    }
+
     lab-anssi-lien {
       grid-area: demande;
       @include a-partir-de(md) {
