--- a/front/assets/styles/commun.scss
+++ b/front/assets/styles/commun.scss
@@ -95,6 +95,18 @@
     }
   }
 
+  h4 {
+    font-size: 1.375rem;
+    line-height: 1.75rem;
+    font-weight: bold;
+    margin: 0 0 24px;
+
+    @include a-partir-de(md) {
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
+  }
+
   h5 {
     font-size: 1.25rem;
     line-height: 1.75rem;
