[THEME] Remplace le gris clair des bordures
... par la variable DSFR `--border-default-grey`

--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -212,7 +212,7 @@
     .barometre {
       padding: 24px;
       background-color: white;
-      border: solid 1px #ddd;
+      border: solid 1px var(--border-default-grey);
 
       @include a-partir-de(lg) {
         width: 50%;
