--- a/front/assets/styles/niveaux-maturite.scss
+++ b/front/assets/styles/niveaux-maturite.scss
@@ -42,7 +42,7 @@ p {
 
     .details {
       p {
-        border-bottom: 1px solid #dddddd;
+        border-bottom: 1px solid var(--border-default-grey);
       }
     }
   }
