--- a/front/assets/styles/controle-segmente.scss
+++ b/front/assets/styles/controle-segmente.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 .controle-segmente {
   display: flex;
   flex-direction: row;
@@ -13,7 +14,7 @@
     text-decoration: none;
     font-weight: 500;
     cursor: pointer;
-    border: 1px solid #ddd;
+    border: 1px solid var(--border-default-grey);
     border-left-style: none;
     color: var(--noir);
     padding: 16px 24px;
