[THEME] Remplace le blanc des textes
... par la variable DSFR `--text-inverted-grey`

--- a/front/assets/styles/carte-item.scss
+++ b/front/assets/styles/carte-item.scss
@@ -122,7 +122,7 @@ a.carte {
       line-height: 1.25rem;
       font-size: 0.75rem;
       background: var(--background-flat-blue-france-lab);
-      color: white;
+      color: var(--text-inverted-grey);
       border-radius: 8px;
 
       &:before {
