--- a/front/assets/styles/commun.scss
+++ b/front/assets/styles/commun.scss
@@ -195,7 +195,7 @@
     .bouton.secondaire {
       background: transparent;
       border: 1px solid white;
-      color: white;
+      color: var(--text-inverted-grey);
     }
   }
 
