--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -18,7 +18,7 @@
     }
 
     a {
-      color: white;
+      color: var(--text-inverted-grey);
       text-decoration: underline;
       display: inline;
     }
