[THEME] Remplace le blanc des fonds
... par la variable DSFR `--background-defaukt-grey`

--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -211,7 +211,7 @@
 
     .barometre {
       padding: 24px;
-      background-color: white;
+      background-color: var(--background-default-grey);
       border: solid 1px var(--border-default-grey);
 
       @include a-partir-de(lg) {
