[THEME] Remplace le noir des bordures d'actions
... par la variable DSFR `--border-action-high-blue-france)`

--- a/front/assets/styles/commun.scss
+++ b/front/assets/styles/commun.scss
@@ -156,7 +156,7 @@
   }
 
   .bouton.secondaire {
-    border: 1px solid var(--noir);
+    border: 1px solid var(--border-action-high-blue-france);
     color: var(--noir);
     padding: 16px 24px;
     font-size: 1rem;
