--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -473,7 +473,7 @@ footer {
 
       input[type='checkbox'] {
         appearance: none;
-        border: 1px solid var(--noir);
+        border: 1px solid var(--border-action-high-blue-france);
         border-radius: 4px;
         width: 24px;
         height: 24px;
