--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -270,7 +270,7 @@ section {
       'titre'
       'contenu'
       'bouton';
-    border-bottom: 6px solid var(--noir);
+    border-bottom: 6px solid var(--border-action-high-blue-france);
     box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
 
     @include a-partir-de(lg) {
