[THEME] Remplace le jaune MSC  bordures actives
... par la variable DSFR `--background-active-blue-france`

--- a/front/assets/styles/carte-item.scss
+++ b/front/assets/styles/carte-item.scss
@@ -193,7 +193,7 @@ a.carte {
 
   figure {
     figcaption {
-      background: var(--jaune-msc);
+      background: var(--background-active-blue-france);
       color: var(--noir);
 
       &:before {
