--- a/front/assets/styles/controle-segmente.scss
+++ b/front/assets/styles/controle-segmente.scss
@@ -37,7 +37,7 @@
     }
 
     &:not([disabled]).actif {
-      background: var(--jaune-msc);
+      background: var(--background-active-blue-france);
 
       &:not([disabled]):hover {
         background: var(--jaune-msc-hover);
