--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -227,7 +227,7 @@ section {
       display: block;
       min-width: 6px;
       position: absolute;
-      background-color: var(--jaune-msc);
+      background-color: var(--background-active-blue-france);
       top: 6px;
       left: 0;
       border-radius: 6px;
