[THEME] Ajoute le thème MSC
... et l'applique partout

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -29,6 +29,11 @@
     rel="stylesheet"
     nonce="%%NONCE%%"
   >
+  <link
+    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.41.3/lab-anssi-theme.msc.css"
+    rel="stylesheet"
+    nonce="%%NONCE%%"
+  >
 
   {% if include.extra-js %}
     <script src="{{ include.extra-js | relative_url }}" type="module"></script>
