--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'fr' }}">
   {% include head.html extra-js=layout.script %}
-  <body>
+  <body data-themeable>
     {% if site.env.MATOMO_ID != '' and site.env.MATOMO_ID != undefined %}
     <script
       type="module"
