--- a/front/assets/styles/commun.scss
+++ b/front/assets/styles/commun.scss
@@ -214,7 +214,7 @@
   }
 
   .erreur-champ-saisie {
-    color: var(--erreur-texte);
+    color: var(--text-default-error);
   }
 
   .erreur-champ-saisie:before {
