[THEME] Remplace le gris des mentions
... par la variable DSFR `--text-mention-grey`. On applique, où on le peut, le style dsfr texte-mention-xs.

--- a/front/assets/styles/prestataires-labellises.scss
+++ b/front/assets/styles/prestataires-labellises.scss
@@ -20,8 +20,8 @@
       .contenu {
         .labels {
           span {
-            color: #666;
             background-color: transparent;
+            margin: 0;
           }
         }
       }
