--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -13,6 +13,7 @@
   <title>{{page.titreHtml}}</title>
   <meta name="description" content="{{ site.data.meta-description[page.url] | escape }}">
 
+  <link rel="stylesheet" href="{{ "/assets/styles/dsfr.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/boutons.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/controle-segmente.css" | relative_url }}">
