[DEMANDE DIAG] Applique les styles DSFR des textes
... sur le WebComponent

--- a/demande-diag/src/styles.scss
+++ b/demande-diag/src/styles.scss
@@ -7,6 +7,7 @@
 
   @include commun.polices-marianne('../../front/assets/fonts/');
   @include commun.titres-dsfr();
+  @include commun.textes-dsfr();
   @include commun.bouton();
   @include commun.erreur-champ-saisie();
 }
