[UI-KIT][JEKYLL] Utilise la version de la dépendance
...en la récupérant via un plugin maison, qui l'insère dans le site

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -26,12 +26,12 @@
   <link rel="stylesheet" href="{{ style | relative_url }}">
   {% endfor %}
   <link
-    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.41.3/dsfr-variables.css"
+    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/{{ site.version_lab_ui_kit }}/dsfr-variables.css"
     rel="stylesheet"
     nonce="%%NONCE%%"
   >
   <link
-    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.41.3/lab-anssi-theme.msc.css"
+    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/{{ site.version_lab_ui_kit }}/lab-anssi-theme.msc.css"
     rel="stylesheet"
     nonce="%%NONCE%%"
   >
