[PIED] Ajoute les liens vers des nouvelles pages
...pour protéger association / collectivité / entreprise

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -58,6 +58,12 @@
       <a href="/securite" class="lien">Sécurité</a>
       <hr />
       <a href="/accessibilite" class="lien">Accessibilité : non conforme</a>
+      <hr />
+      <a href="/collectivites" class="lien">Protéger ma collectivité</a>
+      <hr />
+      <a href="/entreprises" class="lien">Protéger mon entreprise</a>
+      <hr />
+      <a href="/associations" class="lien">Protéger mon association</a>
     </div>
   </div>
 </footer>
